# YOLOv8-TensorRT-CPP

./: .gitignore  CLAUDE.md  CMakeLists.txt  FOLLOWUPS.md  README.md  flash_p4.bat  git_commit.bat  git_pull.bat  list_ports.bat  run_cs2.bat  run_valo.bat  run_valo_fp16.bat  run_valo_fp32.bat  train_all.bat
.deepseek/pastes/: paste-2026-06-10-180034-0b8f5fc2.md  paste-2026-06-14-143722-a87899d4.md
dep/: config_cs2.ini  config_cs2_v11m.ini  config_cs2_v11s.ini  config_cs2_v26l.ini  config_cs2_v26m.ini  config_cs2_v8.ini  config_valo.ini  config_valo_fp16.ini  config_valo_fp32.ini  config_valo_v11m.ini  config_valo_v11s.ini  config_valo_v11s_purple.ini  config_valo_v26l.ini  config_valo_v26m.ini  config_valo_v8.ini  config_valo_v8_purple.ini
models/: .gitignore
scripts/: pytorch2onnx.py
src/: CrosshairTrackerGPU.cu  CrosshairTrackerGPU.h  D3D11Overlay.h  DXGICapture.h  DXGICaptureCUDA.h  DetectorFactory.cpp  DetectorFactory.h  DiscordOverlay.h  EngineBase.h  EngineFP16.h  EngineFP16Kernels.cu  EngineFP16Kernels.h  EngineFP32.h  EngineFactory.h  GDIOverlay.cpp  GDIOverlay.h  GdiDebugWindow.h  IniParser.h  MetricsWriter.h  MouseController.cpp  MouseController.h  Overlay.cpp  Overlay.h  SoftwareFuser.cu  SoftwareFuser.h  WindowCapture.h  YoloDetector.cpp  YoloDetector.h  YoloPostprocKernels.cu  YoloPostprocKernels.h  YoloV11.cpp  YoloV11.h  YoloV26.cpp  YoloV26.h  engine.cpp  engine.h  object_detection_image.cpp  object_detection_image_mt.cpp  repopack-output.txt  shader.hlsl  (+3 more)
